[metadata]
name = graph-asp
version = 0.0.9
description = CLI endpoint to handle (ASP encoded) graphs
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/grasp
license = GPL
keywords = graph, Answer Set Programming
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    clyngor>=0.3.1
    networkx==2.1
    pydot==1.2.4

[zest.releaser]
create-wheel = yes

[options.packages.find]
exclude =
    test

[options.entry_points]
console_scripts=
    grasp = grasp.__main__:run_cli
